Add answer magics to cells in 03a

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "1. Review creating a class in Python.\n",
     "2. Learn about data classes in Python.\n",
-    "3. Learn how to write a class in Pydantic that enforces data types and constraints"
+    "3. Learn how to write a class in Pydantic that enforces data types and constraints\n",
+    "4. Very briefly introduce `ipyautoui` to uncover an issue with our model of the controls."
    ]
   },
   {
@@ -45,6 +46,22 @@
     "\n",
     "+ The `window_size` should be an integer larger than one and, to match our earlier example, less than or equal to 100.\n",
     "+ The `polynomial_order` should be an integer less than or equal to 10, and less than the `window_size`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We import our dashboard below to get the magics from it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dashboard"
    ]
   },
   {
@@ -447,14 +464,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer "
+    "# %answer key/03a/01.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Add a `window_size` attribute and a `polynomial_order` attribute to the class in the cell below."
+    "2. Add a `window_size` attribute with a default value of 2 and a `polynomial_order` attribute with a default value of 1 to the class in the cell below."
    ]
   },
   {
@@ -463,22 +480,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer \n",
+    "# %answer key/03a/03.py\n",
     "\n",
     "class DataSelectorPlainPython:\n",
     "    \"\"\"\n",
     "    Partial implementation of a class to hold a data selector widget.\n",
     "    \"\"\"\n",
-    "    def __init__(self, year_range_input=(1800, 2000)):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        year_range_input=(1800, 2000)\n",
+    "    ):\n",
     "        self.year_range = year_range_input\n",
-    "        # Put your code here and in the __init__ call too"
+    "        # Add your code here and to the __init__ signature above\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Make an instance of the class and print each of its attributes."
+    "3. Make an instance of the class called `selector_plain` and print each of its attributes."
    ]
   },
   {
@@ -487,8 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer \n",
-    "# your code here"
+    "# %answer key/03a/05.py\n"
    ]
   },
   {
@@ -504,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer "
+    "# %answer key/03a/07.py\n"
    ]
   },
   {
@@ -596,7 +615,7 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "1. Extend `DataSelectorDataClass` so that it also has a `window_size` and a `polynomial_order`."
+    "1. Extend `DataSelectorDataClass` so that it also has a `window_size` with a default value of 2 and a `polynomial_order` with a default value of 1."
    ]
   },
   {
@@ -605,7 +624,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer \n"
+    "# %answer key/03a/09.py\n",
+    "\n",
+    "@dataclass\n",
+    "class DataSelectorDataClass:\n",
+    "    \"\"\"\n",
+    "    A class to hold a data selector widget using dataclasses.\n",
+    "    \"\"\"\n",
+    "    year_range: tuple = (1800, 2000)\n",
+    "    # Add your code below -- remember to include the default values\n"
    ]
   },
   {
@@ -631,9 +658,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer\n",
+    "# %answer key/03a/11.py\n",
     "\n",
-    "# Put your comparisons here"
+    "# Put your comparison here"
    ]
   },
   {
@@ -710,22 +737,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We import our dashboard below to get the `exception` cell magic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dashboard"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -798,7 +809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer \n"
+    "# %answer key/03a/13.py\n"
    ]
   },
   {
@@ -1038,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "#### Exercise\n",
     "\n",
     "Add a constraint on the `polynomial_order` that requires is to be greater than or equal to 1 and less than or equal to 10."
    ]
@@ -1049,15 +1060,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer "
+    "# %answer key/03a/15.py\n",
+    "\n",
+    "class DataSelectorModelDraft5(BaseModel, validate_assignment=True):\n",
+    "    year_range: tuple[int, int] = (1800, 2000)\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
+    "    # Modify the line below\n",
+    "    polynomial_order: int = 1\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With these changes we have some of the constraints we want. \n",
-    "\n",
+    "With these changes we have some of the constraints we want. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imposing constraints on multiple fields"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There is one more thing we need to do: the polynomial order should be at least 1 less than the window size in addition to being 10 or smaller.\n",
     "\n",
     "To do that we will add a *model validator* to our pydantic class. The model validator has access to all of the proposed model values and can check them in whatever way it wants. If the values are acceptable then the method returns `self`. If the values are not acceptable then the validator should raise a `ValueError`.\n",
@@ -1085,13 +1114,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are not quite ready to export our pydantic model -- we will do that later."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "\n",
     "class DataSelectorModelDraft6(BaseModel, validate_assignment=True):\n",
     "    year_range: tuple[int, int] = (1800, 2000)\n",
     "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
@@ -1102,7 +1136,7 @@
     "    @model_validator(mode=\"after\")\n",
     "    def limit_polynomial_order(self):\n",
     "        \n",
-    "        if self.polynomial_order >= self.window_size - 1:\n",
+    "        if self.polynomial_order > self.window_size - 1:\n",
     "            # Handle a bad polynomial order or window size\n",
     "            raise ValueError(\"Polynomial order must be smaller than window size\")\n",
     "            \n",
@@ -1115,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise\n",
+    "#### Exercise\n",
     "\n",
     "1. Check whether the new validation works by creating a valid `DataSelectorModelDraft6` and then trying to set the `polynomial_order` or `window_size` to inconsistent values. "
    ]
@@ -1126,14 +1160,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer "
+    "# %answer key/03a/17.py\n",
+    "\n",
+    "# Break things here!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Another benefit of pydantic: easy to save model value to a file"
+    "## Additional benefits of using Pydantic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Easy to save model value to a file"
    ]
   },
   {
@@ -1240,7 +1283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Yet another bonus: text representation of the model\n",
+    "### Text representation of the model\n",
     "\n",
     "The `model_json_schema` method produces a json schema for the model, which is a description of the model and its restrictions.\n",
     "\n",
@@ -1308,14 +1351,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use `nbdev` to export the code we want to reuse from this notebook "
+    "## A problem with the data selector so far\n",
+    "\n",
+    "There is a problem with our data selector class that is not obvious. To expose, we are going to use `ipyautoui`, a package that can generate a widget from a Pydantic model, to make a user interface from our model.\n",
+    "\n",
+    "We will talk about ipyautoui in more detail in the next part of the tutorial. "
    ]
   },
   {
@@ -1324,8 +1364,223 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: write answer \n",
+    "from ipyautoui import AutoUi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AutoUi(DataSelectorModelDraft6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two surprising things here. The first is that there was a validation error for `year_range`. The second is that the control for `year_range` does not look anything like a way to enter a range of years.\n",
     "\n",
+    "Resolving the second issue will also, it turns out, address the first.\n",
+    "\n",
+    "The problem here is that our description of `year_range` is incomplete. Right now we annotate `year_range` as `tuple[int, int]`. That isn't quite right, since there is a constraint on both the first and second integer. Each must be in the range of years covered by the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get the year range from the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One other issue is that we have manually put in the start and end year. Let's fix that up now by importing the data to get the range of years."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "DATA_DIR = 'data'\n",
+    "DATA_FILE = 'land-ocean-temp-index.csv'\n",
+    "\n",
+    "original_data = pd.read_csv(Path(DATA_DIR) / DATA_FILE, escapechar='#')\n",
+    "min_year = original_data['Year'].min()\n",
+    "max_year = original_data['Year'].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fixing the slider problem: adding a constraint to `year_range` contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to express to pydantic that each `int` has a restricted range. We'll do that by defining our own type below and then using that custom type in our Pydantic model.\n",
+    "\n",
+    "We use feature of type hinting introduced in Python 3.12 called type aliasing to do this. \n",
+    "\n",
+    "Since this tutorial was written to work in Python 3.11, we need to use the `tpying-extensions` package, which is a package that back ports new typing features in Python to versions before the feature was added.\n",
+    "\n",
+    "The cell below imports`TypeAliasType` from `typing-extensions`to let pydantic and type checkers know that we are defining a new type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "from typing_extensions import TypeAliasType"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we define a `ConstrainedInt` type that includes limits on its range. Instead of using fixed values of 1880 and 2023 we read in the data file and use the minimum and maximum from the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "ConstrainedInt = TypeAliasType(\n",
+    "    \"ConstrainedInt\", \n",
+    "    Annotated[\n",
+    "        int, \n",
+    "        Field(ge=min_year, le=max_year)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** The feature looks very different in Python 3.12 than it does in earlier versions of Python. The equivalent to the definition of `ConstrainedInt` below in Python 3.12 looks like this:\n",
+    "\n",
+    "```python\n",
+    "# Only works in Python 3.12 and up!\n",
+    "type ConstrainedInt = Annotated[int, Field(ge=1880, le=2023)]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we write our pydantic model using this new type to `year_range`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "class DataSelectorModel(BaseModel, validate_assignment=True):\n",
+    "    year_range: Annotated[\n",
+    "        # The key change is in the line below\n",
+    "        tuple[ConstrainedInt, ConstrainedInt],\n",
+    "        # With this change to the type we no longer need to tell ipyautoui\n",
+    "        # what kind of widget to use. Field contains just a brief description\n",
+    "        Field(description=\"Range of years to plot\")\n",
+    "    ] = (1800, 2000)\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
+    "    polynomial_order: Annotated[int, Field(ge=1, le=10)] = 1\n",
+    "\n",
+    "    # mode=\"after\" means the validator runs after pydantic has checked that the individual\n",
+    "    # fields have values that are valid.\n",
+    "    @model_validator(mode=\"after\")\n",
+    "    def limit_polynomial_order(self):\n",
+    "        \n",
+    "        if self.polynomial_order > self.window_size - 1:\n",
+    "            # Handle a bad polynomial order or window size\n",
+    "            raise ValueError(\"Polynomial order must be smaller than window size\")\n",
+    "            \n",
+    "        # If we got this far the polynomial order is consistent with the window size\n",
+    "        # so return self. Failing to return self will end up causing an error.\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise: try out the auto-generated user interface\n",
+    "\n",
+    "Make an interface using `AutoUi` from the model above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %answer key/03a/19.py\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks great! We will save our progress here and look into ipyautoui more in the next part of the tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export module with `nbdev`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We save the code we want to reuse in the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from nbdev.export import nb_export\n",
     "\n",
     "nb_export('03a_pydantic.ipynb', 'dashboard_pydantic')"
