Pick a better name for the pydantic model file

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -742,7 +742,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp widgets_pydantic"
+    "#| default_exp pydantic_model"
    ]
   },
   {
