Updated the voici instructions.

--- a/04b_deployment_clientside.ipynb
+++ b/04b_deployment_clientside.ipynb
@@ -31,13 +31,15 @@
    "source": [
     "## Voici\n",
     "\n",
-    "[Voici](https://github.com/voila-dashboards/voici) is a project that aims to provide a way to deploy Jupyter notebooks as standalone web applications.  It is built on top of [JupyterLite](https://jupyterlite.readthedocs.io/en/latest/), a smaller, browser-based version of the Jupyter notebook environment. JupyterLite (and thus Voici) uses WebAssembly to run a Python interpreter in the browser, and includes a JavaScript kernel for running JavaScript code. Both Voici and JupyterLite are still in the early stages of development, but is aimed at allowing client-side processing of Jupyter notebooks without requiring the installation of a Jupyter server.\n",
+    "[Voici](https://github.com/voila-dashboards/voici) is a project in heavy development that aims to provide a way to deploy Jupyter notebooks as standalone web applications.  It is built on top of [JupyterLite](https://jupyterlite.readthedocs.io/en/latest/), a smaller, browser-based version of the Jupyter notebook environment. JupyterLite (and thus Voici) uses WebAssembly to run a Python interpreter in the browser, and includes a JavaScript kernel for running JavaScript code. Both Voici and JupyterLite are still in the early stages of development so they are still quite buggy.\n",
     "\n",
-    "Assuming all the dependencies of your notebook are available in the JupyterLite environment, you can try to deploy your notebook as a standalone web application using Voici as follows:\n",
+    "JupyterLite can only use `no-arch` (OS-independent) Python packages from conda-forge and WebAssembly-based packages from emscripten-forge can be installed.  If you can restrict yourself to those packages, you can try to deploy your notebook as a standalone web application using Voici as follows:\n",
     "\n",
     "1. Create a project directory (in this tutorial, it is called `voici_project`) that will eventually contain:\n",
-    "   -  a \"webapp\" directory of Jupyter notebooks you want to deploy and\n",
-    "   -  an `environment.yml` file listing the required Python packages (Example provided in the `voici_project` directory)"
+    "   -  a `webapp` directory containing data, local packages, and the Jupyter notebooks you want to deploy and\n",
+    "   -  an `environment.yml` file listing the required Python packages (Example provided in the `voici_project` directory)\n",
+    "2. Create the `webapp` subdirectory and place any notebooks and other files you want to deploy it.  In our case copy the `dashboard` and `data` directories as well as the `02d_dashboard_test.ipynb` notebook into `webapp`.\n",
+    "3. Create an `environment.yml` file in the project directory.  That file should contain the list of required Python packages similar to the example one provided (remember, packages can only be `no-arch` (OS-independent) Python packages from conda-forge and WebAssembly-based packages from emscripten-forge)."
    ]
   },
   {
@@ -48,7 +50,7 @@
    "outputs": [],
    "source": [
     "# Execute this cell to see the content of the environment.yml file that can\n",
-    "# be used by \"voice build\" for this dashboard.\n",
+    "# be used by \"voici build\" for this dashboard.\n",
     "%load voici_project/environment.yml"
    ]
   },
@@ -57,17 +59,53 @@
    "id": "b1681d16",
    "metadata": {},
    "source": [
-    "2. In that project directory:\n",
-    "   - create an `environment.yml` file in the directory containing the list of required Python packages.\n",
-    "   - Place any notebooks and other files you want to deploy in the \"webapp\" directory.\n",
-    "   - via the CLI, run `voici build webapp` (assuming a \"webapp\" directory named `webapp`) to build the web application.  The build process will create a `_output` directory containing the static files for the web application.\n",
+    "4. Via the CLI, run `voici build --contents webapp` (assuming a \"webapp\" directory named `webapp`) to build the web application.  The build process will create a `_output` directory containing the static files for the web application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10b90af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
     "\n",
-    "The challenge is during the build process, Voici will try to install WebAssembly versions of the Python packages that have C or rust code from the `emscripten-force` repo. If a package is not available in the WebAssembly format and uses any compiled C or rust code, the build will fail.\n",
+    "cd voici_project\n",
+    "voici build --contents webapp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d39a0660",
+   "metadata": {},
+   "source": [
+    "At this point you can test and see if the web application works by running a local web server pointed at the `_output` directory and then openning a new browser tab pointed at the local server [(http://localhost:8000/)](http://localhost:8000/).  If it works, you can deploy the `_output` directory to a web server. If you execute the following cell, you will need to \"Interrupt\" the kernel to continue with the rest of the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3d8d17d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
     "\n",
-    "**Annoying Voici Build Problem**: There is currently a problem in that during the build process `conda` is used to install the packages, and a bug was introduced in the build-process for WebAssembly packages at the `emscripten-force` repo that causes the build to fail with an error that \"'emscripten' is not a valid Platform\". \n",
+    "python -m http.server 8000 --directory voici_project/_output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9beef60b",
+   "metadata": {},
+   "source": [
+    "**Annoying Voici Build Problem**: There is currently a problem in that during the build process if `conda` is used to install the packages. A bug was recently introduced in the build-process for WebAssembly packages at the `emscripten-force` repo that causes the build to fail with an error that \"'emscripten' is not a valid Platform\".\n",
     "- [This is a known issue](https://github.com/mamba-org/mamba/issues/3291) and is [being worked on](https://github.com/conda/conda/pull/13962).  \n",
     "- If this happens to you, you may will likely need to perform a `conda clean --all` to clear the messed up package metadata that you downloaded. Otherwise any future attempt to `conda install` will fail with a similar error!\n",
-    "- The workaround is to install `micromamba` (which is why we include it in the `complexapps-2024` environment) as it doesn't trigger the bug and is automatically selected by `voici build` if installed."
+    "- The workaround is to install `micromamba` (which is why we include it in the `complexapps-2024` environment) as it doesn't trigger the bug and is automatically selected by `voici build` if installed.\n",
+    "  \n",
+    "**Other Bugs**: There are other bugs we have noticed, for example, the voici-deployed web application does not seem to be able to update the plot on the dashboard."
    ]
   },
   {
